Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#14975 closed bug (fixed)

Magnify: cannot move mouse cursor with Opt+arrows

Reported by: KapiX Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Applications/Magnify Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

User Guide says mouse cursor can be moved pixel by pixel with Opt+arrow keys. It actually changes the active window.

Change History (4)

comment:1 by humdinger, 6 years ago

I assume this feature needed to be broken with the introduction of S&T. With S&T OPT+cursor right/left cycles through stacked windows; OPT+Cursor up/down seems to cyle through open windows.

While OPT+Cursor left/right still works to move the pointer 1 pixel in Magnify, it probably should better be changed to use ALT+Cursor up/down/left/right.

Last edited 6 years ago by humdinger (previous) (diff)

comment:2 by humdinger, 6 years ago

I've pushed a patch that uses CTRL instead of OPT as that's much easier than using ALT, which isn't as easily checked in KeyDown(). See https://review.haiku-os.org/c/haiku/+/1315

comment:3 by waddlesplash, 6 years ago

Resolution: fixed
Status: newclosed

Merged in hrev53036.

comment:4 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.