Magnify: Change cursor move shortcut

As OPT + cursor keys clashes with switching between open windows
(probably since the addition of Stack & Tile), let's use CTRL instead.

Fixes #14975